--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,6 @@
+@import "../node_modules/react-dropzone-component/styles/filepicker.css";
+@import "../node_modules/dropzone/dist/min/dropzone.min.css";
+
 body {
     margin: 0;
     padding: 0;
